# scalbot

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  MAKEFILE  Makefile  README.md  cli.py  daily_summary_mail.html  main.py  pyproject.toml  requirements.txt  run_bot.py
config/: daily_summary_mail.html  mail_templates.py  params.yaml
scalbot/: __init__.py  backtesting.py  bigquery.py  bybit.py  data.py  mail.py  scalbot.py  technical_indicators.py  trades.py  utils.py
scalbot/enums/: __init__.py  broker.py  order_type.py  side.py  symbol.py  trade_decision_component.py  trade_result.py
scalbot/models/: __init__.py  bybit_response.py  candle.py  latest_info.py  open_position.py  order.py  trade.py
tests/: test_bybit.py  test_scalbot.py  test_trades.py
